# exploring_google_flatbuffers

./: CMakeLists.txt  README.md  parrot.fbs  qn_2_read_and_update_parrot.cpp  qn_2_read_and_update_parrot.h  qn_3_client_socket.cpp  qn_3_client_socket.h  qn_3_server_socket.cpp  qn_3_server_socket.h  qn_4_client_socket.cpp  qn_4_client_socket.h  qn_4_server_socket.cpp  qn_4_server_socket.h  qn_5_publisher_sender.cpp  qn_5_publisher_sender.h  qn_5_subscriber_receiver.cpp  qn_5_subscriber_receiver.h  read_and_update_parrot.cpp  read_and_update_parrot.h
generated_parrot/: parrot_generated.h
generated_parrot.h/: parrot_generated.h
